--- a/index.html
+++ b/index.html
@@ -1583,11 +1583,11 @@
 
 // selectedSymptomを文字列に整形
 const selectedSymptomText = formData.selectedSymptom
-    ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
+    ? formData.selectedSymptom.map(item => `${item.name}`).join('、')
     : 'メニュー未選択';
 
 // irradiationsCountの整形（nullチェック）
-const irradiationsText = formData.irradiationsCount ? `,${formData.irradiationsCount}` : '';
+const irradiationsText = formData.irradiationsCount ? `、${formData.irradiationsCount}` : '';
 
 // メッセージ送信
 liff.sendMessages([{
