--- a/index.html
+++ b/index.html
@@ -315,19 +315,6 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            transform-origin: center center;
-        }
-
-        .week-button:hover {
-            background-color: #444444;
-            transform: scale(1.15);
-            /* ドーン！ってくらい拡大🔥 */
-        }
-
-        .week-button:active {
-            transform: scale(0.95);
-            /* クリックした瞬間にギュッと縮む💥 */
         }
 
         .month-button-container {
@@ -345,17 +332,6 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-        }
-
-        .month-button:hover {
-            background-color: #444444;
-            transform: scale(1.15);
-            /* ドーン！ってくらい拡大🔥 */
-        }
-
-        .month-button:active {
-            transform: scale(0.95);
-            /* クリックした瞬間にギュッと縮む💥 */
         }
 
         .current-month {
@@ -771,7 +747,7 @@
     </div>
 
     <div class="container">
-        <h1>モイスティーヌ武蔵ヶ丘サロン<br>渡邊予約フォーム</h1>
+        <h1>モイスティーヌ武蔵ヶ丘サロン<br>高宗恵美子予約フォーム</h1>
 
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -852,7 +828,6 @@
         let selectedFullDate = '';
         let currentDate = new Date();
         let availabilityCache = {};
-        let irradiationsCount = ''; <!-- 選択された症状を格納する変数 -->
         let totalAmount = 0; // 合計金額を格納する変数
         let menuPrice = 0; // メニューの価格
         let optionsPrice = 0; // オプションの合計価格
@@ -1167,9 +1142,9 @@
             <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="8700">afterフォロー</button>
             <div class="info-textopop">【afterフォロー】<br>所要時間：90分</div>
             <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="6700">モイスティーヌPro（シンプル）</button>
-            <div class="info-textopop">【モイスティーヌPro（シンプル）】<br>時間がない方におすすめ✨<br>美容マッサージ＋イオントリートメント<br>のお得なコースです♪<br><br>①ご予約日の2,3日前からお控えください<br>☑️お顔剃り<br>☑️パーマ/ヘアカラー<br>☑️マツエク/まつ毛パーマ<br><br>②当日はボディースーツの着用はお控えください。<br>腰、首に濡れたパフを乗せて脊髄通電をするため、<br>また、よりリラックスをして施術を受けていただくために<br>ご協力をお願いいたします。<br>所要時間：60分</div>
+            <div class="info-textopop">【モイスティーヌPro（シンプル）】<br>所要時間：60分</div>
             <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="10900">モイスティーヌPro（フルコース）</button>
-            <div class="info-textopop">【モイスティーヌPro（フルコース）】<br>店長オススメ‼️<br>より【美】を追求したい方におすすめ✨<br>美容マッサージ＋イオントリートメント<br>更に毛穴に特化したディープ洗顔付🫧<br><br>①ご予約日の2,3日前からお控えください<br>☑️お顔剃り<br>☑️パーマ/ヘアカラー<br>☑️マツエク/まつ毛パーマ<br><br>②当日はボディースーツの着用はお控えください。<br>腰、首に濡れたパフを乗せて脊髄通電をするため<br>また、よりリラックスをして施術を受けていただくために<br>ご協力をお願いいたします。<br>所要時間：90分</div>
+            <div class="info-textopop">【モイスティーヌPro（フルコース）】<br>所要時間：90分</div>
         `;
             }
 
@@ -1274,7 +1249,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbxVBDSFhp7bFGlaGJz66jNpa4oWsmngWtQ_ocovvwHxTKu4gIZ4fcnMwUynbjCmzvpOFw/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbwptSRNzH4fuK-DUWKG9dcCH6CDu52Nu9CMeKy_FaMIq8wOorxQFudP52H76ZJvaO50kw/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
