--- a/index.html
+++ b/index.html
@@ -1600,7 +1600,7 @@
 
             // selectedSymptomを文字列に整形
             const selectedSymptomText = formData.selectedSymptom
-                ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
+                ? formData.selectedSymptom.map(item => `${item.name}`).join('\n,')
                 : 'メニュー未選択';
 
             // irradiationsCountの整形（nullチェック）
