--- a/index.html
+++ b/index.html
@@ -1598,10 +1598,10 @@
                 return;
             }
 
-            // selectedSymptomを文字列に整形
-            const selectedSymptomText = formData.selectedSymptom
-                ? formData.selectedSymptom.map(item => `${item.name}`).join('\n,')
-                : 'メニュー未選択';
+// selectedSymptomを文字列に整形（1行ずつ「・」付きにして改行） 
+const selectedSymptomText = formData.selectedSymptom && formData.selectedSymptom.length > 0
+    ? formData.selectedSymptom.map(item => `・${item.name}`).join('\n')
+    : 'メニュー未選択';
 
             // irradiationsCountの整形（nullチェック）
             const irradiationsText = formData.irradiationsCount || 'なし';
