--- a/index.html
+++ b/index.html
@@ -934,10 +934,13 @@
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="label">ご来店回数<span class="required">必須</span></div>
+        <div class="label">年齢<span class="required">必須</span></div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目〈30分〉</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降〈0分〉</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">20代</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">30代</button>
+            <button type="button" id="sanVisit" onclick="selectVisit(this)">40代</button>
+            <button type="button" id="yonVisit" onclick="selectVisit(this)">50代</button>
+            <button type="button" id="goVisit" onclick="selectVisit(this)">60代以上</button>
         </div>
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
@@ -1482,6 +1485,9 @@
 
             document.getElementById('firstVisit').classList.remove('active');
             document.getElementById('repeatVisit').classList.remove('active');
+            document.getElementById('sanVisit').classList.remove('active');
+            document.getElementById('yonVisit').classList.remove('active');
+            document.getElementById('goVisit').classList.remove('active');
             element.classList.add('active');
             visitCount = element.innerText;
 
@@ -1598,17 +1604,17 @@
                 return;
             }
 
-// selectedSymptomを文字列に整形（1行ずつ「・」付きにして改行） 
-const selectedSymptomText = formData.selectedSymptom && formData.selectedSymptom.length > 0
-    ? formData.selectedSymptom.map(item => `・${item.name}`).join('\n')
-    : 'メニュー未選択';
+            // selectedSymptomを文字列に整形（1行ずつ「・」付きにして改行） 
+            const selectedSymptomText = formData.selectedSymptom && formData.selectedSymptom.length > 0
+                ? formData.selectedSymptom.map(item => `・${item.name}`).join('\n')
+                : 'メニュー未選択';
 
             // irradiationsCountの整形（nullチェック）
             const irradiationsText = formData.irradiationsCount || 'なし';
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\nご来店回数：${formData.visitCount}\n\nコース：${formData.selectedMenu}\n【メニュー】\n${selectedSymptomText}\n【オプション】\n${irradiationsText}\n\n【希望日時】\n\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\nメッセージ：${formData.message}`
+                text: `【ご予約内容】\n\n≪お名前≫：${formData.name}\n\n≪電話番号≫：${formData.phone}\n\n≪ご来店回数≫：${formData.visitCount}\n\n≪コース≫：${formData.selectedMenu}\n≪メニュー≫\n${selectedSymptomText}\n≪オプション≫\n${irradiationsText}\n\n【希望日時】\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n≪メッセージ≫\n${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
